@@ -2,7 +2,11 @@ Changes since 4.1:
 
 * New indentation code using SMIE when available.
 
+* sml-back-to-outer-indent is now on S-tab (aka `backtab') rather than M-tab.
+
 * Support for electric-layout-mode and electric-indent-mode.
+
+* sml-mark-defun tries to be more clever.
 
 Changes since 4.0:
 
